--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
-== RNN (A Neural Network implementation in Ruby)
+== RNeural (A Neural Network implementation in Ruby)
 
-_More to come..._
+For now, this only supplies a feed-forward network.  More to come...
